# almondsen-bot

./: Cargo.toml  README.md
src/: commands.rs  event_handler.rs  events.rs  main.rs
src/commands/: addlogin.rs  ball.rs  hello.rs  ping.rs
src/utils/: mod.rs  ns_api.rs
