[package]
name = "almondsen-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = "0.11.18"
serde-xml-rs = "0.6.0"
serde = { version = "1.0.183", features = ["derive"] }
shuttle-runtime = "0.23.0"
shuttle-persist = "0.23.0"
shuttle-serenity = "0.23.0"
shuttle-secrets = "0.23.0"
